joshi check derek-tryfinal workflow

--- a/Basic QA system-Derek combination new whole thing.ipynb
+++ b/Basic QA system-Derek combination new whole thing.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
@@ -608,11 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2409\n",
+      "6054\n"
+     ]
+    }
+   ],
    "source": [
     "(nerDevCorrect, nerDevWrong) = evaluateNERonDev()\n",
     "print len(nerDevCorrect)\n",
@@ -628,7 +637,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.parse.stanford import StanfordDependencyParser\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "os.environ['CLASSPATH'] = '/Users/derekwang/stanford_package/stanford-parser-full-2016-10-31'\n",
+    "\n",
+    "dep_parser=StanfordDependencyParser(model_path=\"edu/stanford/nlp/models/lexparser/englishPCFG.ser.gz\")\n",
+    "\n",
+    "\n",
+    "#sentence = dep_parser.raw_parse(\"The quick brown fox jumps over the lazy dog.\")\n",
+    "tree =[parse.tree() for parse in dep_parser.raw_parse('')]\n",
+    "#print tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "needs\n",
+      "<type 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print tree[0].label()\n",
+    "print type(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
    "metadata": {
     "collapsed": true
    },
@@ -650,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {
     "collapsed": true
    },
@@ -680,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 231,
    "metadata": {
     "collapsed": true
    },
@@ -703,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 225,
    "metadata": {
     "collapsed": false
    },
@@ -786,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -824,9 +876,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 227,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -966,32 +1027,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 218,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'evaluateNERonDev' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-218-30f57d02eeb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mnerDevCorrect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnerDevWrong\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluateNERonDev\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'evaluateNERonDev' is not defined"
+     ]
+    }
+   ],
    "source": [
     "(nerDevCorrect, nerDevWrong) = evaluateNERonDev()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 3, 3, [(u'Infrared thermal-imaging cameras', 'O'), (u'are', 'STOPWORD'), (u'used', u'O'), (u'to', 'STOPWORD'), (u'detect heat loss', u'O'), (u'in', 'STOPWORD'), (u'insulated systems', u'O'), (u',', 'PUNC'), (u'to', 'STOPWORD'), (u'observe changing blood flow', u'O'), (u'in the', 'STOPWORD'), (u'skin', u'O'), (u',', 'PUNC'), (u'and to', 'STOPWORD'), (u'detect overheating', u'O'), (u'of', 'STOPWORD'), (u'electrical apparatus', u'O'), (u'.', 'PUNC')])\n"
+     "ename": "NameError",
+     "evalue": "name 'nerDevCorrect' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-217-64435e86fa8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mnerDevCorrect\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m29\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'nerDevCorrect' is not defined"
      ]
     }
    ],
    "source": [
-    "print nerDevCorrect[0]"
+    "print nerDevCorrect[29]"
    ]
   },
   {
@@ -1003,9 +1080,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 258,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1038,18 +1115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 261,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number Correct : 920\n",
-      "Number incorrect: 1489\n",
-      "Average correct : 0.381901203819\n"
+      "Number Correct : 699\n",
+      "Number incorrect: 1710\n",
+      "Average correct : 0.290161892902\n"
      ]
     }
    ],
