--- a/derek -try final workflow.ipynb
+++ b/derek -try final workflow.ipynb
@@ -1016,25 +1016,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'Who was', u'Who is', u'Which contestant', u'What was', u'Who wrote', u'What is', u'Who said', u'Who did', u'Who has', u'Who played']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print person_word_list"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 117,
    "metadata": {
     "collapsed": true
@@ -1070,40 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Shim function for later clean\n",
-    "\n",
-    "def getQuestionType(question):\n",
-    "    if 'Who' in question:\n",
-    "        return \"PERSON\"\n",
-    "    if 'whom' in question:\n",
-    "        return \"PERSON\"\n",
-    "    if 'where' in question:\n",
-    "        return \"LOCATION\"\n",
-    "    if 'what place' in question:\n",
-    "        return \"LOCATION\"\n",
-    "    if 'How many' in question:\n",
-    "        return \"NUMBER\"\n",
-    "    if 'How much' in question:\n",
-    "        return \"NUMBER\"\n",
-    "    if 'When' in question:\n",
-    "        return \"NUMBER\"\n",
-    "    if 'what year' in question:\n",
-    "        return \"NUMBER\"\n",
-    "    if 'What year' in question:\n",
-    "        return \"NUMBER\"\n",
-    "    else:\n",
-    "        return \"O\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 453,
    "metadata": {
     "collapsed": true
    },
@@ -1130,7 +1078,6 @@
     "        if span_tag != \"O\" and span_tag != \"STOPWORD\" and span_tag !=\"PUNC\":\n",
     "            \n",
     "            if set_span.issubset(question):\n",
-    "                \n",
     "                ranked_list.append([entity, 1])\n",
     "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
     "                \n",
@@ -1138,15 +1085,260 @@
     "                \n",
     "                ranked_list.append([entity, 2])\n",
     "#                 print \"OUT\", raw_span, span_tag, set_span, question\n",
+    "    #print ranked_list\n",
+    "    #generate answer entity list\n",
+    "    answer = process_answer_entities(answer_entities)\n",
     "    \n",
+    "    tree = []\n",
+    "    same_list = []\n",
+    "    for ele in ranked_list:\n",
+    "        same_list.append(ele[1])\n",
+    "    if 1 not in same_list:\n",
+    "        try:\n",
+    "            tree =[parse.tree() for parse in dep_parser.raw_parse(answer)]   \n",
+    "        except AssertionError:\n",
+    "            return sorted(ranked_list, key=lambda x: x[1], reverse=True)\n",
+    "        else:\n",
+    "            ranked_list.append([tree[0].label(),1])\n",
+    "            #print tree[0].label()\n",
     "    return sorted(ranked_list, key=lambda x: x[1], reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 440,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#remove the non-word entities from answer-entities\n",
+    "def process_answer_entities(anwser_entities):\n",
+    "    new_anwser_entities =[]\n",
+    "    for (entity,entity_type) in anwser_entities:\n",
+    "        tokenized_entity = word_tokenize(entity)\n",
+    "        #print tokenized_entity\n",
+    "        temp = []\n",
+    "        for ele in tokenized_entity:\n",
+    "            temp.append(ele.encode('utf-8'))\n",
+    "        temp = ' '.join(temp)\n",
+    "        new_anwser_entities.append(temp)\n",
+    "    result = ' '.join(new_anwser_entities)\n",
+    "    return result   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.parse.stanford import StanfordDependencyParser\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "os.environ['CLASSPATH'] = '/Users/derekwang/stanford_package/stanford-parser-full-2016-10-31'\n",
+    "\n",
+    "dep_parser=StanfordDependencyParser(model_path=\"edu/stanford/nlp/models/lexparser/englishPCFG.ser.gz\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 33 1⁄3 rpm LP ( for `` long-play '' ) format was developed by Columbia Records and marketed in June 1948 .\n"
+     ]
+    }
+   ],
+   "source": [
+    "print process_answer_entities(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `record` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "[(u'The', 'O'), (u'33 1\\u20443', 'NUMBER'), (u'rpm', u'O'), (u'LP', 'OTHERCAP'), (u'(', u'O'), (u'for', 'STOPWORD'), (u\"`` long-play '' ) format\", u'O'), (u'was', 'STOPWORD'), (u'developed', u'O'), (u'by', 'STOPWORD'), (u'Columbia Records', 'OTHERCAP'), (u'and', 'STOPWORD'), (u'marketed', u'O'), (u'in', 'STOPWORD'), (u'June', 'OTHERCAP'), (u'1948', 'NUMBER'), (u'.', 'PUNC')]\n",
+    "Who developed the 33 1/3 rpm speed record?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Who developed the 33 1/3 rpm speed record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "question = 'Who developed the 33 1/3 rpm speed record?'\n",
+    "a= [(u'The', 'O'), (u'33 1\\u20443', 'NUMBER'), (u'rpm', u'O'), (u'LP', 'OTHERCAP'), (u'(', u'O'), (u'for', 'STOPWORD'), (u\"`` long-play '' ) format\", u'O'), (u'was', 'STOPWORD'), (u'developed', u'O'), (u'by', 'STOPWORD'), (u'Columbia Records', 'OTHERCAP'), (u'and', 'STOPWORD'), (u'marketed', u'O'), (u'in', 'STOPWORD'), (u'June', 'OTHERCAP'), (u'1948', 'NUMBER'), (u'.', 'PUNC')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 444,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'ascii' codec can't decode byte 0xe2 in position 8: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-444-2984bb072e0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mparse\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdep_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_parse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The 33 1⁄3 rpm LP ( for `` long-play '\u001b[0m\u001b[0;34m' ) format was developed by Columbia Records and marketed in June 1948 .'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/DerekWang/anaconda/lib/python2.7/site-packages/nltk/parse/stanford.pyc\u001b[0m in \u001b[0;36mraw_parse\u001b[0;34m(self, sentence, verbose)\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0mrtype\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \"\"\"\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_parse_sents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mraw_parse_sents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/DerekWang/anaconda/lib/python2.7/site-packages/nltk/parse/stanford.pyc\u001b[0m in \u001b[0;36mraw_parse_sents\u001b[0;34m(self, sentences, verbose)\u001b[0m\n\u001b[1;32m    150\u001b[0m             \u001b[0;34m'-outputFormat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_OUTPUT_FORMAT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m         ]\n\u001b[0;32m--> 152\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parse_trees_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtagged_parse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe2 in position 8: ordinal not in range(128)"
+     ]
+    }
+   ],
+   "source": [
+    "tree =[parse.tree() for parse in dep_parser.raw_parse('The 33 1⁄3 rpm LP ( for `` long-play '' ) format was developed by Columbia Records and marketed in June 1948 .')]\n",
+    "print tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(u'33 1\\u20443', 'NUMBER'), 2], [(u'LP', 'OTHERCAP'), 2], [(u'Columbia Records', 'OTHERCAP'), 2], [(u'June', 'OTHERCAP'), 2], [(u'1948', 'NUMBER'), 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = first_filter(question,a)\n",
+    "print first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "same_list = []\n",
+    "for ele in first:\n",
+    "    same_list.append(ele[1])\n",
+    "print 1 not in same_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(u'Elvis Presley', u'PERSON'), 2, 1], [(u'Sun Records', 'OTHERCAP'), 2, 1], [(u'45', 'NUMBER'), 2, 1], [(u'78', 'NUMBER'), 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "second = second_filter(question, first)\n",
+    "print second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(u'Elvis Presley', u'PERSON'), 2, 1], [(u'Sun Records', 'OTHERCAP'), 2, 1], [(u'45', 'NUMBER'), 2, 1], [(u'78', 'NUMBER'), 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "third = third_filter(question, a, second)\n",
+    "print third"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(u'Elvis Presley', u'PERSON'), 3], [(u'Sun Records', 'OTHERCAP'), 3], [(u'45', 'NUMBER'), 3], [(u'78', 'NUMBER'), 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = reduce_rank(third)\n",
+    "print result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1175,9 +1367,8 @@
     "                #print set_span\n",
     "                if len(set_span) > 2:\n",
     "                    ranked_list.append([entity, 0])\n",
-    "            \n",
+    "               \n",
     "            elif set_span.issubset(question):\n",
-    "                \n",
     "                ranked_list.append([entity, 1])\n",
     "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
     "                \n",
@@ -1419,9 +1610,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 460,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1437,11 +1628,11 @@
     "    for result_b in b_output_answer_set:\n",
     "        \n",
     "        question = question_set[result_b[\"set_index\"]][result_b[\"question_index\"]][\"question\"]\n",
-    "        \n",
     "        first_pass = first_filter(question, result_b[\"candidates\"])\n",
-    "        \n",
-    "        second_pass = second_filter(question, first_pass)\n",
-    "        \n",
+    "        try:\n",
+    "            second_pass = second_filter(question, first_pass)\n",
+    "        except IndexError:\n",
+    "            second_pass = []\n",
     "        third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
     "        \n",
     "        fourth_pass = reduce_rank(third_pass)\n",
@@ -1455,7 +1646,8 @@
     "            top_answer = fourth_pass[0]\n",
     "    #         pp.pprint(top_answer)        \n",
     "            predicted_answer = top_answer[0][0]\n",
-    "        \n",
+    "            \n",
+    "     \n",
     "        else:\n",
     "            \n",
     "            first_pass = first_filter_object_stop(question, result_b[\"candidates\"])\n",
@@ -1476,11 +1668,6 @@
     "\n",
     "        #         pp.pprint(top_answer)    \n",
     "                predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
-    "                for i in range(10):\n",
-    "                    if predicted_answer in stop_words or predicted_answer in punct_tokens:\n",
-    "                        predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
-    "                    else:\n",
-    "                        continue\n",
     "            \n",
     "        \n",
     "        result_c = {\n",
@@ -1579,9 +1766,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 458,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1600,15 +1788,16 @@
       "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
       "        'ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
-      "                                  0.2857142857142857]],\n",
+      "                                  0.38095238095238093],\n",
+      "                              [u'had', 0.0]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  32\n",
-      "Rank Wrong:  372\n",
+      "Rank Correct:  31\n",
+      "Rank Wrong:  373\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0792079207921\n",
-      "Rank Correct Average of Previous %:  0.477611940299\n",
+      "Rank Overall Average %:  0.0767326732673\n",
+      "Rank Correct Average of Previous %:  0.462686567164\n",
       "\n"
      ]
     }
@@ -1659,43 +1848,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing rank:  dev\n",
-      "\n",
-      "Part C Output: \n",
-      "[   {   'candidates': [   (u'Infrared', 'O'),\n",
-      "                          (u'is', 'STOPWORD'),\n",
-      "                          (u'used', u'O'),\n",
-      "                          (u'in', 'STOPWORD'),\n",
-      "                          (u'night vision equipment', u'O'),\n",
-      "                          (u'when there is', 'STOPWORD'),\n",
-      "                          (u'insufficient visible light', u'O'),\n",
-      "                          (u'to', 'STOPWORD'),\n",
-      "                          (u'see', u'O'),\n",
-      "                          (u'.', 'PUNC')],\n",
-      "        'predicted_answer': u'night vision equipment',\n",
-      "        'question_index': 0,\n",
-      "        'ranked_answers': [   [   (u'night vision equipment', u'O'),\n",
-      "                                  0.26666666666666666],\n",
-      "                              [   (u'insufficient visible light', u'O'),\n",
-      "                                  0.19999999999999998]],\n",
-      "        'sentence_index': 71,\n",
-      "        'set_index': 0}]\n",
-      "\n",
-      "Rank Correct:  1169\n",
-      "Rank Wrong:  7294\n",
-      "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.138130686518\n",
-      "Rank Correct Average of Previous %:  0.484057971014\n",
-      "\n"
+      "Processing rank:  dev\n"
      ]
     }
    ],
@@ -1705,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 274,
    "metadata": {
     "collapsed": true
    },
@@ -1766,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false,
     "scrolled": true
