slight change for pos

--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -1646,7 +1646,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ner:  dev\n"
+      "Processing ner:  dev\n",
+      "Warning: parsing empty text\n",
+      "\n",
+      "Part B Output: \n",
+      "[   {   'candidates': [   (u'Infrared', 'O'),\n",
+      "                          (u'is', 'O'),\n",
+      "                          (u'used', 'O'),\n",
+      "                          (u'in', 'O'),\n",
+      "                          (u'night vision equipment', 'O'),\n",
+      "                          (u'when', 'O'),\n",
+      "                          (u'there', 'O'),\n",
+      "                          (u'is', 'O'),\n",
+      "                          (u'insufficient', 'O'),\n",
+      "                          (u'visible light', 'O'),\n",
+      "                          (u'to', 'O'),\n",
+      "                          (u'see', 'O'),\n",
+      "                          (u'.', 'PUNC')],\n",
+      "        'question_index': 0,\n",
+      "        'sentence_index': 71,\n",
+      "        'set_index': 0}]\n",
+      "\n",
+      "Ner Correct:  2468\n",
+      "Ner Wrong:  5995\n",
+      "Ner Total:  8463\n",
+      "Ner Overall Average %:  0.291622356138\n",
+      "Ner Correct Average of Previous %:  0.487747035573\n",
+      "\n"
      ]
     }
    ],
